# Parallel-computing---Uni-Hildesheim-exercises

./: 1_grad_descent.py  2_grad_descent.py  3A_4.py  3A_5.py  3A_6.py  3B.py  Gradient Descent Implementation.py  KMeans - parallel computing.py  KMeans fix.py  KNN - Parallel computing.py  KNN.py  PyTorch_1.py  PyTorch_2.py  PyTorch_3.py  PyTorch_4.py  Sorting - Parallel computing.py  Task2_analysis.R  VScode.code-workspace  advmarkt.R  collective_comm.py  exam_practice.py  final sorting.py  kaggle.py  main.py  point2pointcomm.py  pyproject.toml
Hadoop/: Dockerfile  README.md  docker-compose.yml  env_vars.sh  run_ass.sh  run_exam.sh  run_from_docker.sh  run_grayscale.sh  run_practice.sh  run_textrank.sh
Hadoop/hadoop_code/: dot_product_mapper.py  dot_product_reducer.py  inpt_practice.txt  input_textrank.txt  mapper.py  mapper_adjacency.py  mapper_anagram.py  mapper_anagram_2.py  mapper_image.py  mapper_practice.py  mapper_textrank.py  mapper_textrank2.py  output.txt  output_adjacency.txt  output_practice.txt  output_textrank.txt  output_threshold_3.txt  output_threshold_4.txt  output_threshold_5.txt  reducer.py  reducer_adjacency.py  reducer_anagram.py  reducer_anagram_2.py  reducer_image.py  reducer_practice.py  reducer_textrank.py  reducer_textrank2.py  run.sh  stitch_grayscale.py
